--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,25 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+/* my styles */
+body {
+    @apply bg-slate-900;
+    font-family: 'Poppins', sans-serif;
+    color: #fff;
+    line-height: 1.6;
+  }
+.card {
+    @apply rounded-md relative bg-gray-100 text-gray-800;
+}
+.card div {
+    @apply absolute w-fit px-2 py-1 rounded-full bg-red-400 text-white top-0 left-0 transform -translate-x-1/3 -translate-y-1/3  text-center text-xs;
+}
+.card button.close {
+    @apply absolute w-fit top-0 right-0 p-2
+}
+.card p {
+    @apply py-6 px-4 text-sm;
 }
