--- a/src/index.css
+++ b/src/index.css
@@ -14,12 +14,81 @@ body {
 .card {
     @apply rounded-md relative bg-gray-100 text-gray-800;
 }
-.card div {
-    @apply absolute w-fit px-2 py-1 rounded-full bg-red-400 text-white top-0 left-0 transform -translate-x-1/3 -translate-y-1/3  text-center text-xs;
+.card div.rating {
+    @apply absolute w-fit px-2 py-1 rounded-full bg-red-400 text-white top-0 left-0 transform -translate-x-1/3 -translate-y-1/3  text-center text-xs cursor-pointer;
 }
-.card button.close {
-    @apply absolute w-fit top-0 right-0 p-2
+.card div.card-btns {
+    @apply absolute w-fit top-0 right-0 p-2 space-x-1;
 }
 .card p {
     @apply py-6 px-4 text-sm;
+}
+
+/* input */
+  input:focus {
+    outline: none;
+  }
+
+/* Button */
+.btn {
+  color: #fff;
+  border: 0;
+  border-radius: 8px;
+  color: #fff;
+  @apply w-fit px-4 py-1 tracking-wider my-auto mx-1;
+  cursor: pointer;
+}
+.btn-primary {
+  background-color: #202142;
+}
+.btn-secondary {
+  @apply bg-red-400;
+}
+.btn:disabled {
+  background-color: #ddd;
+  color: #333;
+  cursor: auto;
+}
+
+
+/* styling input radio */ 
+.rating li,
+.num-display {
+  position: relative;
+  background: #f4f4f4;
+  width: 40px;
+  height: 40px;
+  padding: 10px;
+  text-align: center;
+  border-radius: 50%;
+  font-size: 14px;
+  border: 1px #eee solid;
+  transition: 0.3s;
+}
+  
+.rating li label {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 40px;
+  height: 40px;
+  padding: 10px;
+  border-radius: 50%;
+  transform: translate(-50%, -50%);
+  cursor: pointer;
+}
+  
+.rating li:hover,
+.num-display {
+  @apply bg-red-400;
+  color: #fff;
+}
+  
+[type='radio'] {
+  opacity: 0;
+}
+  
+[type='radio']:checked ~ label {
+  @apply bg-red-400;
+  color: #fff;
 }
